# GIFT

./: .gitignore  README.md  README.org  index.html  makefile  params.json
GIFT_PYTHON/: GIFT_lib.py  REAMDE.md  __init__.py
app/: GIFTinloop.m
code/dev/src/: gift.hpp
code/dev/test/test_function/: test_init-predict.gift
code/dev/test/test_script/: test_init-train.gift  test_outDrugSub2ProteinSubFile  test_predictDrugNameListFile  test_proteinSubNameListFile
code/dev/testCMAKE/: test_readMatrix.cpp
code/v_1/src_matlab/: GetHash2.m  Mstep.m
data/: drug_repmat.txt  target_repmat.txt
data/chemspace/: CompoundCID_NegSampleSpace.mat  README.org  SubStructure_NegSampleSpace.mat
data/domain/: domPF.txt  pfnm
data/protein/: README.org  get_proteininfo.R  prot_uniprot.txt  protein_explanation_uniprot  target_infor.txt  target_infor_gift.xlsx
data/substructures/: CompoundSub.txt
dev/dev_src/src/: CMakeLists.txt  EMGift.cpp
dev/dev_src/test/test_script/: test_init-train.gift  test_protein2domain
dev/doc/: Doxyfile
dev/doc/html/: _e_m_gift_8cpp.html  annotated.html  classes.html  classgift_1_1_e_m-members.html  classgift_1_1_e_m.html  classgift_1_1parameters-members.html  classgift_1_1parameters.html  classgift_1_1row_col-members.html  classgift_1_1row_col.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  functions.html  functions_func.html  functions_gift_8cpp.html  functions_vars.html  gift_8hpp.html  gift_8hpp_source.html  globals.html  globals_func.html  index.html  main_8cpp.html  namespacegift.html  namespacemembers.html  namespacemembers_func.html  namespacemembers_type.html  namespacemembers_vars.html  namespaces.html  parameter_gift_8cpp.html
dev/doc/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_a.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  files_0.js  files_1.js  files_2.js  files_4.js  functions_0.js  functions_1.js  functions_10.js  functions_2.js  functions_3.js  functions_4.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  functions_c.js  functions_e.js  namespaces_0.js  (+14 more)
dev/doc/latex/: _e_m_gift_8cpp.tex  annotated.tex  classgift_1_1_e_m.tex  classgift_1_1parameters.tex  classgift_1_1row_col.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  files.tex  functions_gift_8cpp.tex  gift_8hpp.tex  main_8cpp.tex  namespacegift.tex  namespaces.tex  parameter_gift_8cpp.tex  refman.aux  refman.idx  refman.ilg  refman.ind  refman.tex  refman.toc
dev/src/: gift.hpp
dev/test/test_function/: functionsGift.cpp
dev/test/test_script/: test_bash.sh  test_outPredictCPIsFile  test_outRecordFile  test_predictDrugsFileName_WithSubs  test_predictProteinNameListFile  test_predictProteinsFileName_WithSubs
dev/testCMAKE/: CMakeLists.txt
dev_version/dev_src/: CMakeLists.txt  gift.h
dev_version/dev_src/src/: CMakeLists.txt  EMGift.cpp  EMGift.hpp  functionsGift.cpp  gift.cpp  gift.h  gift.hpp  globalvar_gift.hpp  main.cpp  parameterGift.cpp  parameterGift.hpp
dev_version/dev_src/test/: README.md  test_bash.sh  test_drug2protein  test_init-predict.gift  test_proteinNameList
dev_version/dev_src/test/test_function/: testGiftFunctions.cpp  test_init-predict.gift
dev_version/dev_src/test/test_script/: test_bash.sh  test_drugSubNameListFile  test_init-train.gift  test_proteinSubNameListFile
dev_version/dev_src/testCMAKE/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  testParamters_config  testReadFile.cpp  testc++11.cpp
dev_version/src/: InferDPB.cpp  TAGS
dev_version/src_1.0/: EM_Boost.cpp  InferDPB.cpp
dev_version/test_python_c/boost_python/tutorial/: Jamroot  MANIFEST  generate_code.py  hello_online.hpp  hello_world.cpp  setup.py  test_boost.cpp  test_python_api.c
dev_version/test_python_c/boost_python/tutorial/lib/python/: spam-1.0-py2.7.egg-info
doc/: GIFT.tex  SupplementaryMaterials.docx
examples/: CalcTCM.m  pfam2name_whole.txt  target_UniID  update-calcbygift.m
materials/posts/: #sample.bib#  conference_poster_6.bbl
materials/results/: SupplemantaryResults.xlsx
matlab_version/: LoglikehoodEM.m  devEM.m
posts/: conference_poster_6.aux  conference_poster_6.blg  conference_poster_6.tex  sample.bib
results/: SupplemantaryResults.xlsx
scriptsbyMatlab/: BuildHash.m  ExampleScript_GIFT.m  Sub2Domain_EmpricalBayesian.m  SubDomainEM.m  write_matrix_double_txt.m
src/: InferDPB.cpp  InferDPB.h  PreInfer.cpp  PreInfer.h
src_copy_unchange/: InferDPB.cpp
test/dev/data/: init.gift
test/dev/test/: README.md
test/dev/test/test_function/: gift.hpp  parameterGift.cpp  testGiftFunctions.cpp
test/dev/test/test_script/: test_drugNameList  test_outVarDrugSub2ProteinSubFile
test/dev/testCMAKE/: testRead
test_python_c/boost_python/PyUblas/: CMakeLists.txt
test_python_c/boost_python/tutorial/: boost_python_wrapper  say_hello_py.py
v_1/src_matlab/: AssociationMethod.m  GetHash.m  write_matrix_txt.m
version_1.0/: makefile
version_1.0/scriptsbyMatlab/: write_matrix_int_txt.m
version_1/src_matlab/: EStep.m
version_2/src_cpp/src/: main.cpp
