CMAKE_MINIMUM_REQUIRED(VERSION 3.4)

SET(CMAKE_CXX_STANDARD 11)
#MESSAGE(STATUS "The compiler is  ${CMAKE_CXX_COMPILER_ID}")
# Compiler-specific C++11 activation.
# IF("${CMAKE_CXX_COMPILER_ID}" MATCHES "GNU")
#   EXECUTE_PROCESS(
#     COMMAND ${CMAKE_CXX_COMPILER} -dumpversion OUTPUT_VARIABLE GCC_VERSION)
#   IF(NOT (GCC_VERSION VERSION_GREATER 4.7 OR GCC_VERSION VERSION_EQUAL 4.7))
#     MESSAGE(FATAL_ERROR "${PROJECT_NAME} requires g++ 4.7 or greater.")
#   ENDIF()
# ELSEIF("${CMAKE_CXX_COMPILER_ID}" MATCHES "Clang")
#   SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -stdlib=libc++")
# ELSE ()
#   MESSAGE(FATAL_ERROR, "Your C++ compiler does not supprot c++11.")
# ENDIF()


PROJECT (GIFT CXX)
# The version number,
SET (GIFT_VERSION_MAJOR 2)
SET (GIFT_VERSION_MINOR 0)

ADD_SUBDIRECTORY(src bin)
# SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
