CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
IF(NOT CMAKE_BUILD_TYPE)
  SET(CMAKE_BUILD_TYPE "DEBUG")
  #SET(CMAKE_BUILD_TYPE "RELEASE")
  #SET(CMAKE_BUILD_TYPE "RELWITHDEBINFO")
  #SET(CMAKE_BUILD_TYPE "MINSIZEREL")
ENDIF()
FIND_PACKAGE(PythonInterp)
FIND_PACKAGE(PythonLibs)
MESSAGE(STATUS "This is python_include_dir " ${PYTHON_INCLUDE_DIRS} )
MESSAGE(STATUS "PYTHON library is " ${PYTHON_LIBRARIES})
SET(BOOST_ROOT /usr/local/include)
FIND_PACKAGE(Boost) #/usr/local/include/boost
IF(Boost_FOUND)
  INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS} ${PYTHON_INCLUDE_DIRS}
    "/Users/wangchao/home/songpeng/software/Anaconda/anaconda/lib/python2.7/site-packages/pyublas/include"
    "/Users/wangchao/home/songpeng/software/Anaconda/anaconda/pkgs/numpy-1.10.4-py27_0/lib/python2.7/site-packages/numpy/core/include")
#  MESSAGE(STATUS "THis is boost_include_dir" ${Boost_INCLUDE_DIRS})
  MESSAGE(STATUS "This is boost_library_dir" ${Boost_LIBRARIES})
#  SET(Boost_USE_STATIC_LIBS OFF)
#  SET(Boost_USE_MULTITHREADED ON)
#  SET(Boost_USE_STATIC_RUNTIME OFF)
  FIND_PACKAGE(Boost COMPONENTS python)
  LINK_DIRECTORIES(/Users/wangchao/home/songpeng/software/Anaconda/anaconda/lib/python2.7/site-packages/pyublas/include/pyublas/
    /Users/wangchao/home/songpeng/software/Anaconda/anaconda/include/python2.7 /usr/local/include)
  ADD_LIBRARY(sample_ext STATIC sample_ext.cpp) # FAILED AT SHARED LIBRARY. Not know numpy
  #  TARGET_LINK_LIBRARIES(sample_ext numpy.hpp)
#  PYTHON_ADD_MODULE(sample_ext sample_ext.cpp)
#  FILE(COPY sample_ext.py DESTINATION .)
ELSEIF(NOT Boost_FOUND)
  MESSAGE(FATAL_ERROR "Unable to find correct Boost version. Did you set BOOST_ROOT?")
ENDIF(Boost_FOUND)

#IF(CMAKE_COMPILER_IS_GNUCXX)
#  ADD_DEFINITIONS("-Wall")
#ELSE()
#  MESSAGE(FATAL_ERROR "CMakeLists.txt has not been tested/written for your compiler.")
#ENDIF()
